tests/types/result/errors/test_err_ok_extra_argument.sushi
# Tests error for Ok with extra arguments
# EXPECT_ERROR_CODE: CE2050

enum MyError:
    Error

fn test_func() i32 | MyError:
    return Result.Ok(42, 100)

fn main() i32:
    return Result.Ok(0)
